fix: 지라 정규화 응답과 이벤트 시각 정리